[package]
name = "carboxyl-cli"
version = "0.1.1"
authors = ["Eduard Bopp <eduard.bopp@aepsil0n.de>"]
description = "Library for functional reactive programming"
homepage = "https://github.com/aepsil0n/carboxyl-cli"
repository = "https://github.com/aepsil0n/carboxyl-cli"
readme = "README.md"
keywords = ["frp", "reactive", "cli"]
license = "LGPL-3.0+"

[dependencies]
carboxyl = "0.2"
